// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cache 1`] = `"test"`;

exports[`cache 2`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {},
    Symbol(lruList): Yallist {
      "head": null,
      "length": 0,
      "tail": null,
    },
    Symbol(length): 0,
  },
  "name": "test",
}
`;

exports[`cache get & put 1`] = `undefined`;

exports[`cache get & put 2`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {
      "test" => Node {
        "list": Yallist {
          "head": [Circular],
          "length": 1,
          "tail": [Circular],
        },
        "next": null,
        "prev": null,
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test",
        },
      },
    },
    Symbol(lruList): Yallist {
      "head": Node {
        "list": [Circular],
        "next": null,
        "prev": null,
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test",
        },
      },
      "length": 1,
      "tail": Node {
        "list": [Circular],
        "next": null,
        "prev": null,
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test",
        },
      },
    },
    Symbol(length): 1,
  },
  "name": "test",
}
`;

exports[`cache get & put 3`] = `"test"`;

exports[`cache putIfAbsent 1`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {
      "test" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": [Circular],
        },
        "next": null,
        "prev": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": [Circular],
          "prev": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test",
        },
      },
      "test2" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": null,
          "prev": [Circular],
          "value": Entry {
            "key": "test",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test",
          },
        },
        "prev": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test",
              },
            },
          },
          "next": [Circular],
          "prev": null,
          "value": Entry {
            "key": "test3",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test3",
          },
        },
        "value": Entry {
          "key": "test2",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test2",
        },
      },
      "test3" => Node {
        "list": Yallist {
          "head": [Circular],
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test",
              },
            },
          },
          "next": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
    },
    Symbol(lruList): Yallist {
      "head": Node {
        "list": [Circular],
        "next": Node {
          "list": [Circular],
          "next": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
      "length": 3,
      "tail": Node {
        "list": [Circular],
        "next": null,
        "prev": Node {
          "list": [Circular],
          "next": [Circular],
          "prev": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test",
        },
      },
    },
    Symbol(length): 3,
  },
  "name": "test",
}
`;

exports[`cache putIfAbsent 2`] = `"test"`;

exports[`cache putIfAbsent 3`] = `"test2"`;

exports[`clear 1`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {
      "test" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": [Circular],
        },
        "next": null,
        "prev": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": [Circular],
          "prev": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "testnew",
        },
      },
      "test2" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": null,
          "prev": [Circular],
          "value": Entry {
            "key": "test",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "testnew",
          },
        },
        "prev": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "testnew",
              },
            },
          },
          "next": [Circular],
          "prev": null,
          "value": Entry {
            "key": "test3",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test3",
          },
        },
        "value": Entry {
          "key": "test2",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test2",
        },
      },
      "test3" => Node {
        "list": Yallist {
          "head": [Circular],
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "testnew",
              },
            },
          },
          "next": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
    },
    Symbol(lruList): Yallist {
      "head": Node {
        "list": [Circular],
        "next": Node {
          "list": [Circular],
          "next": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
      "length": 3,
      "tail": Node {
        "list": [Circular],
        "next": null,
        "prev": Node {
          "list": [Circular],
          "next": [Circular],
          "prev": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "testnew",
        },
      },
    },
    Symbol(length): 3,
  },
  "name": "test",
}
`;

exports[`clear 2`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {},
    Symbol(lruList): Yallist {
      "head": null,
      "length": 0,
      "tail": null,
    },
    Symbol(length): 0,
  },
  "name": "test",
}
`;

exports[`evict 1`] = `
MemoryCache {
  "cache": LRUCache {
    Symbol(max): Infinity,
    Symbol(lengthCalculator): [Function],
    Symbol(allowStale): false,
    Symbol(maxAge): 0,
    Symbol(dispose): undefined,
    Symbol(noDisposeOnSet): false,
    Symbol(cache): Map {
      "test" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": [Circular],
        },
        "next": null,
        "prev": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": [Circular],
          "prev": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "testnew",
        },
      },
      "test2" => Node {
        "list": Yallist {
          "head": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": null,
              "value": Entry {
                "key": "test3",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test3",
              },
            },
            "length": 3,
            "tail": [Circular],
          },
          "next": null,
          "prev": [Circular],
          "value": Entry {
            "key": "test",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "testnew",
          },
        },
        "prev": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "testnew",
              },
            },
          },
          "next": [Circular],
          "prev": null,
          "value": Entry {
            "key": "test3",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test3",
          },
        },
        "value": Entry {
          "key": "test2",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test2",
        },
      },
      "test3" => Node {
        "list": Yallist {
          "head": [Circular],
          "length": 3,
          "tail": Node {
            "list": [Circular],
            "next": null,
            "prev": Node {
              "list": [Circular],
              "next": [Circular],
              "prev": [Circular],
              "value": Entry {
                "key": "test2",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "test2",
              },
            },
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
        },
        "next": Node {
          "list": Yallist {
            "head": [Circular],
            "length": 3,
            "tail": Node {
              "list": [Circular],
              "next": null,
              "prev": [Circular],
              "value": Entry {
                "key": "test",
                "length": 1,
                "maxAge": 0,
                "now": 0,
                "value": "testnew",
              },
            },
          },
          "next": Node {
            "list": Yallist {
              "head": [Circular],
              "length": 3,
              "tail": [Circular],
            },
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
    },
    Symbol(lruList): Yallist {
      "head": Node {
        "list": [Circular],
        "next": Node {
          "list": [Circular],
          "next": Node {
            "list": [Circular],
            "next": null,
            "prev": [Circular],
            "value": Entry {
              "key": "test",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "testnew",
            },
          },
          "prev": [Circular],
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "prev": null,
        "value": Entry {
          "key": "test3",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "test3",
        },
      },
      "length": 3,
      "tail": Node {
        "list": [Circular],
        "next": null,
        "prev": Node {
          "list": [Circular],
          "next": [Circular],
          "prev": Node {
            "list": [Circular],
            "next": [Circular],
            "prev": null,
            "value": Entry {
              "key": "test3",
              "length": 1,
              "maxAge": 0,
              "now": 0,
              "value": "test3",
            },
          },
          "value": Entry {
            "key": "test2",
            "length": 1,
            "maxAge": 0,
            "now": 0,
            "value": "test2",
          },
        },
        "value": Entry {
          "key": "test",
          "length": 1,
          "maxAge": 0,
          "now": 0,
          "value": "testnew",
        },
      },
    },
    Symbol(length): 3,
  },
  "name": "test",
}
`;
